Originally height of the display area for the tones was dynamic and depended on the number of tones received in the response from tone service. Gave it a fixed height so as to improve readability when there are only a few dominant tones in the text given

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1899,6 +1899,7 @@ pre[class*=" language-"] {
 .sentences {
   min-width: 732px; }
   .sentences--filters {
+    height: 30rem;
     width: 31.91489%;
     margin-left: 0%;
     float: left;
